# algorithms

./: .gitignore  CMakeLists.txt  README.md
Exercise1/: 7_6_eight_queen_problem.cpp
Exercise6/: 7_10_Insert_sort_or_heap_sort_v1.cpp  7_10_Insert_sort_or_heap_sort_v2.cpp  7_1_Set_similarity.cpp  7_2_Social_cluster.cpp  7_3_Iceland_family_tree.cpp  7_4_Subset_sum_problem.cpp  7_5_Look_at_pictures_to_find_gay_friends.cpp  7_6_Half_of_the_set.cpp  7_7_Sequence_block.cpp  7_8_Redundant_links.cpp  7_9_Windows_message_queue.cpp
Exercise7/: 7_10_The_scope_of_the_number_of.cpp  7_1_May_all_lovers_in_the_world_be_brothers_and_sisters.cpp  7_2_Factorization_factor.cpp  7_3_Deciphering_the_message.cpp  7_5_Isbn_judgment_and_error_correction.cpp  7_6_The_inverse_code_of_a_number.cpp
