cmake_minimum_required(VERSION 3.20)
project(algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithms main.cpp)
add_executable(test test.cpp)
add_executable(Exercise6_7_1_Set_similarity Exercise6/7_1_Set_similarity.cpp)
add_executable(Exercise6_7_2_Social_cluster Exercise6/7_2_Social_cluster.cpp)
add_executable(Exercise6_7_3_Iceland_family_tree Exercise6/7_3_Iceland_family_tree.cpp)
add_executable(Exercise6_7_4_Subset_sum_problem Exercise6/7_4_Subset_sum_problem.cpp)
add_executable(Exercise6_7_5_Look_at_pictures_to_find_gay_friends Exercise6/7_5_Look_at_pictures_to_find_gay_friends.cpp)
add_executable(Exercise6_7_9_Windows_message_queue Exercise6/7_9_Windows_message_queue.cpp)
add_executable(Exercise6_7_7_Sequence_block Exercise6/7_7_Sequence_block.cpp)
add_executable(Exercise6_7_6_Half_of_the_set Exercise6/7_6_Half_of_the_set.cpp)
add_executable(Exercise6_7_8_Redundant_links Exercise6/7_8_Redundant_links.cpp)
add_executable(Exercise6_7_10_Insert_sort_or_heap_sort Exercise6/7_10_Insert_sort_or_heap_sort_v1.cpp)
add_executable(Exercise1_7_6_eight_queen_problem Exercise1/7_6_eight_queen_problem.cpp)
add_executable(Exercise6_7_10_Insert_sort_or_heap_sort_v2 Exercise6/7_10_Insert_sort_or_heap_sort_v2.cpp)
add_executable(Exercise7_7_1_May_all_lovers_in_the_world_be_brothers_and_sisters Exercise7/7_1_May_all_lovers_in_the_world_be_brothers_and_sisters.cpp)
add_executable(Exercise7_7_2_Factorization_factor Exercise7/7_2_Factorization_factor.cpp)

add_executable(Exercise7_7_3_Deciphering_the_message Exercise7/7_3_Deciphering_the_message.cpp)
add_executable(Exercise7_7_10_The_scope_of_the_number_of Exercise7/7_10_The_scope_of_the_number_of.cpp)
add_executable(Exercise7_7_6_The_inverse_code_of_a_number Exercise7/7_6_The_inverse_code_of_a_number.cpp)